公告：搜索公告，增加查询参数department_id